--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@shopify/restyle": "^1.6.1",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-asset": "~8.4.6",
