--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "1.7.0",
     "react-native-redash": "14.2.2",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1"
