--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ci": "yarn lint && yarn tsc"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.16",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.6",
