--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/yup": "^0.29.13",
     "eslint-config-react-native-wcandillon": "^3.7.2",
     "typescript": "~4.3.5"
   },
