--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.16",
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@shopify/restyle": "^1.6.1",
