--- a/package.json
+++ b/package.json
@@ -13,39 +13,49 @@
     "ci": "yarn lint && yarn tsc"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-native-async-storage/async-storage": "^1.15.16",
-    "@react-native-masked-view/masked-view": "0.2.6",
-    "@react-navigation/drawer": "^6.3.0",
+    "@hookform/resolvers": "^2.8.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "@shopify/restyle": "^1.6.1",
-    "expo": "~44.0.0",
-    "expo-app-loading": "^1.3.0",
-    "expo-asset": "~8.4.6",
-    "expo-constants": "~13.0.1",
-    "expo-font": "~10.0.4",
-    "expo-status-bar": "~1.2.0",
+    "@shopify/restyle": "^1.6.0",
+    "axios": "^0.24.0",
+    "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-asset": "~8.4.3",
+    "expo-constants": "~12.1.3",
+    "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-secure-store": "~11.0.3",
+    "expo-status-bar": "~1.1.0",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.20.5",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "2.3.1",
-    "react-native-redash": "^15.11.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "^16.2.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "@types/yup": "^0.29.13",
+    "eslint": "^7.32.0",
     "eslint-config-react-native-wcandillon": "^3.7.2",
     "typescript": "~4.3.5"
   },
